create aside bar.

--- a/scss/modules/variables.scss
+++ b/scss/modules/variables.scss
@@ -1,6 +1,6 @@
-$black_text: #222222;
-$white_text: #FFFFFF;
-$red_text: #FF2288;
-$gray_text: #AFAFAF;
+$black_color: #222222;
+$white_color: #FFFFFF;
+$red_color: #FF2288;
+$gray_color: #AFAFAF;
 
 // $black_text
