--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,4 +4,6 @@
 @import 'partials/reset.scss';
 @import 'partials/keyframes.scss';
 @import 'partials/mediaQueries.scss';
+@import 'partials/fonts.scss';
+@import 'page/aside.scss';
 @import 'page/main.scss';
