--- a/styles/style.css
+++ b/styles/style.css
@@ -37,3 +37,106 @@ table {
 
 a {
   text-decoration: none; }
+
+@font-face {
+  font-family: 'AvenirMedium';
+  src: url("../../fonts/AvenirMedium.eot");
+  src: url("../../fonts/AvenirMedium.eot") format("embedded-opentype"), url("../../fonts/AvenirMedium.woff2") format("woff2"), url("../../fonts/AvenirMedium.woff") format("woff"), url("../../fonts/AvenirMedium.ttf") format("truetype"), url("../../fonts/AvenirMedium.svg#AvenirMedium") format("svg"); }
+
+@font-face {
+  font-family: 'AvenirHeavy';
+  src: url("../../fonts/AvenirHeavy.eot");
+  src: url("../../fonts/AvenirHeavy.eot") format("embedded-opentype"), url("../../fonts/AvenirHeavy.woff2") format("woff2"), url("../../fonts/AvenirHeavy.woff") format("woff"), url("../../fonts/AvenirHeavy.ttf") format("truetype"), url("../../fonts/AvenirHeavy.svg#AvenirHeavy") format("svg"); }
+
+@font-face {
+  font-family: 'AvenirBook';
+  src: url("../../fonts/AvenirBook.eot");
+  src: url("../../fonts/AvenirBook.eot") format("embedded-opentype"), url("../../fonts/AvenirBook.woff2") format("woff2"), url("../../fonts/AvenirBook.woff") format("woff"), url("../../fonts/AvenirBook.ttf") format("truetype"), url("../../fonts/AvenirBook.svg#AvenirBook") format("svg"); }
+
+@font-face {
+  font-family: 'AvenirBlack';
+  src: url("../../fonts/AvenirBlack.eot");
+  src: url("../../fonts/AvenirBlack.eot") format("embedded-opentype"), url("../../fonts/AvenirBlack.woff2") format("woff2"), url("../../fonts/AvenirBlack.woff") format("woff"), url("../../fonts/AvenirBlack.ttf") format("truetype"), url("../../fonts/AvenirBlack.svg#AvenirBlack") format("svg"); }
+
+@font-face {
+  font-family: 'Avenir';
+  src: url("../../fonts/AvenirRegular.eot");
+  src: url("../../fonts/AvenirRegular.eot") format("embedded-opentype"), url("../../fonts/AvenirRegular.woff2") format("woff2"), url("../../fonts/AvenirRegular.woff") format("woff"), url("../../fonts/AvenirRegular.ttf") format("truetype"), url("../../fonts/AvenirRegular.svg#AvenirRegular") format("svg"); }
+
+.aside {
+  width: 319px;
+  background-color: #222222;
+  padding: 42px 31px 105px 30px;
+  color: #FFFFFF; }
+  .aside .aside-title {
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center; }
+    .aside .aside-title h3 {
+      font-family: 'AvenirBlack';
+      font-size: 24px; }
+      .aside .aside-title h3 span {
+        font-family: 'AvenirBook'; }
+    .aside .aside-title .burger {
+      width: 26px;
+      height: 11px;
+      position: relative; }
+      .aside .aside-title .burger .divider {
+        width: 26px;
+        height: 1px;
+        background-color: #FFFFFF;
+        position: absolute;
+        transform: translate(-50%, -50%);
+        left: 50%; }
+      .aside .aside-title .burger .divider:nth-child(1) {
+        top: 0; }
+      .aside .aside-title .burger .divider:nth-child(2) {
+        top: 50%; }
+      .aside .aside-title .burger .divider:nth-child(3) {
+        top: 100%; }
+  .aside .aside-nav-div {
+    margin-top: 107px; }
+    .aside .aside-nav-div .aside-nav-li {
+      margin-bottom: 50px; }
+      .aside .aside-nav-div .aside-nav-li .aside-nav-a {
+        display: flex;
+        align-items: center; }
+        .aside .aside-nav-div .aside-nav-li .aside-nav-a img {
+          margin-left: 30px; }
+        .aside .aside-nav-div .aside-nav-li .aside-nav-a h6 {
+          margin-left: 15px;
+          font-size: 16px;
+          font-family: 'AvenirMedium';
+          color: #FFFFFF; }
+    .aside .aside-nav-div .active {
+      background-color: #FF2288;
+      padding: 15px 0 15px 30px;
+      border-radius: 12px;
+      margin-bottom: 35px; }
+      .aside .aside-nav-div .active .aside-nav-a img {
+        margin-left: 0; }
+  .aside .aside-following-box h6 {
+    margin: 40px 0 30px 30px;
+    font-family: 'AvenirHeavy';
+    font-size: 12px; }
+  .aside .aside-following-a {
+    display: flex;
+    align-items: center; }
+    .aside .aside-following-a img {
+      margin-left: 30px; }
+    .aside .aside-following-a h6 {
+      color: #FFFFFF;
+      font-size: 16px;
+      font-family: 'AvenirMedium'; }
+  .aside .loadMore {
+    font-family: 'AvenirHeavy';
+    font-size: 14px;
+    color: #FFFFFF;
+    margin-left: 30px; }
+
+.main-container {
+  max-width: 1920px;
+  display: flex; }
+
+.flex {
+  display: flex; }
