--- a/scss/page/base.scss
+++ b/scss/page/base.scss
@@ -1,7 +1,20 @@
 .main-container{
     max-width: 1920px;
+    width: 100%;
+    margin: 0 auto;
     display: flex;
+}
+.container{
+    max-width: 1485px;
+    width: 100%;
+    margin: 0 auto;
 }
 .flex{
     display: flex;
+}
+.relative{
+    position: relative;
+}
+.absolute{
+    position: absolute;
 }
