--- a/scss/page/aside.scss
+++ b/scss/page/aside.scss
@@ -1,10 +1,10 @@
 .aside{
-    width: 319px;
+    max-width: 319px;
+    width: 100%;
     background-color: $black_color;
     padding: 42px 31px 105px 30px;
     color: $white_color;
     .aside-title{
-        display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
         h3{
@@ -18,6 +18,7 @@
             width: 26px;
             height: 11px;
             position: relative;
+            cursor: pointer;
             .divider{
                 width: 26px;
                 height: 1px;
