--- a/styles/style.css
+++ b/styles/style.css
@@ -63,13 +63,33 @@ a {
   src: url("../../fonts/AvenirRegular.eot");
   src: url("../../fonts/AvenirRegular.eot") format("embedded-opentype"), url("../../fonts/AvenirRegular.woff2") format("woff2"), url("../../fonts/AvenirRegular.woff") format("woff"), url("../../fonts/AvenirRegular.ttf") format("truetype"), url("../../fonts/AvenirRegular.svg#AvenirRegular") format("svg"); }
 
+.main-container {
+  max-width: 1920px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex; }
+
+.container {
+  max-width: 1485px;
+  width: 100%;
+  margin: 0 auto; }
+
+.flex {
+  display: flex; }
+
+.relative {
+  position: relative; }
+
+.absolute {
+  position: absolute; }
+
 .aside {
-  width: 319px;
+  max-width: 319px;
+  width: 100%;
   background-color: #222222;
   padding: 42px 31px 105px 30px;
   color: #FFFFFF; }
   .aside .aside-title {
-    display: flex;
     justify-content: space-between;
     flex-wrap: wrap; }
     .aside .aside-title h3 {
@@ -80,7 +100,8 @@ a {
     .aside .aside-title .burger {
       width: 26px;
       height: 11px;
-      position: relative; }
+      position: relative;
+      cursor: pointer; }
       .aside .aside-title .burger .divider {
         width: 26px;
         height: 1px;
@@ -136,9 +157,50 @@ a {
     color: #FFFFFF;
     margin-left: 30px; }
 
-.main-container {
-  max-width: 1920px;
-  display: flex; }
-
-.flex {
-  display: flex; }
+.main {
+  width: 100%;
+  padding-left: 25px;
+  padding-right: 90px; }
+  .main .header {
+    border-bottom: 1px solid #AFAFAF;
+    padding: 30px 0; }
+    .main .header .container-flex {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center; }
+      .main .header .container-flex .search-box {
+        position: relative; }
+      .main .header .container-flex .search-box input {
+        background-color: #E7E7E7;
+        border: none;
+        border-radius: 12px;
+        padding: 18px 272px 18px 20px;
+        font-family: 'AvenirHeavy';
+        font-size: 14px; }
+      .main .header .container-flex .search-box a {
+        position: absolute;
+        top: 18px;
+        right: 15px; }
+      .main .header .container-flex .nav-ul {
+        display: flex;
+        align-items: center; }
+        .main .header .container-flex .nav-ul .nav-li:not(.first) {
+          margin-left: 30px; }
+          .main .header .container-flex .nav-ul .nav-li:not(.first) .allipse {
+            position: absolute;
+            top: -7px;
+            right: 0; }
+          .main .header .container-flex .nav-ul .nav-li:not(.first) .allipse-second {
+            position: absolute;
+            top: -10px;
+            right: 0; }
+        .main .header .container-flex .nav-ul .first .nav-a {
+          font-family: 'AvenirHeavy';
+          font-size: 14px;
+          color: #FF2288; }
+        .main .header .container-flex .nav-ul .last .nav-a {
+          padding: 20px 40px;
+          background-color: #FF2288;
+          border-radius: 12px;
+          color: #FFFFFF; }
