--- a/scss/page/header.scss
+++ b/scss/page/header.scss
@@ -1,17 +1,21 @@
 .main{
     width: 100%;
-    padding-left: 25px;
-    padding-right: 90px;
     .header{
         border-bottom: 1px solid $gray_color;
-        padding: 30px 0;
+        padding: 30px 90px 30px 25px;
         .container-flex{
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
+            @media (max-width: 1120px){
+                justify-content: center;
+            }
             .search-box{
                 position: relative;
+                @media (max-width: 960px){
+                    display: none;
+                }
             }
             .search-box input{
                 background-color: #E7E7E7;
@@ -20,67 +24,91 @@
                 padding: 18px 272px 18px 20px;
                 font-family: 'AvenirHeavy';
                 font-size: 14px;
+                @media (max-width: 1460px){
+                    padding-right: 0px;
                 }
+            }
             .search-box a{
                 position: absolute;
                 top: 18px;
                 right: 15px;
             }
-            .nav-ul{
-                display: flex;
-                align-items: center;
-                .nav-li:not(.first){
-                    margin-left: 30px;
-                    .allipse{
-                        position: absolute;
-                        top: -7px;
-                        right: 0;
-                    }
-                    .allipse-second{
-                        position: absolute;
-                        top: -10px;
-                        right: 0;
-                    }
+            .nav{
+                @media (max-width: 1120px){
+                        margin-top: 10px;
                 }
-                .first .nav-a{
-                    font-family: 'AvenirHeavy';
-                    font-size: 14px;
-                    color: $red_color;
-                }
-                .last .nav-a{
-                    padding: 20px 40px;
-                    background-color: $red_color;
-                    border-radius:  12px;
-                    color: $white_color;
-                }
-                .nav-right{
+                @media (max-width: 700px){
+                    flex-direction: row;
                     display: flex;
+                    justify-content: space-between;
+                    width: 100%;
                     align-items: center;
                 }
-            }
-            .nav-burger{
-                width: 26px;
-                height: 11px;
-                position: relative;
-                cursor: pointer;
-                margin-left: 10px;
-                display: none;
-                .nav-divider{
+                .nav-ul{
+                    display: flex;
+                    align-items: center;
+                    .nav-li:not(.first){
+                        margin-left: 30px;
+                        .allipse{
+                            position: absolute;
+                            top: -7px;
+                            right: 0;
+                        }
+                        .allipse-second{
+                            position: absolute;
+                            top: -10px;
+                            right: 0;
+                        }
+                    }
+                    .first .nav-a{
+                        font-family: 'AvenirHeavy';
+                        font-size: 14px;
+                        color: $red_color;
+                    }
+                    .last .nav-a{
+                        padding: 20px 40px;
+                        background-color: $red_color;
+                        border-radius:  12px;
+                        color: $white_color;
+                        @media (max-width: 960px){
+                            padding: 5px 10px!important;
+                        }
+                    }
+                    .nav-right{
+                        display: flex;
+                        align-items: center;
+                        @media (max-width: 700px){
+                            display: none;
+                        }
+                    }
+                }
+                .nav-burger{
                     width: 26px;
-                    height: 1px;
-                    background-color: $black_color;
-                    position: absolute;
-                    transform: translate(-50%, -50%);
-                    left: 50%;
-                }
-                .nav-divider:nth-child(1){
-                    top: 0;
-                }
-                .nav-divider:nth-child(2){
-                    top: 50%;
-                }
-                .nav-divider:nth-child(3){
-                    top: 100%;
+                    height: 11px;
+                    position: relative;
+                    cursor: pointer;
+                    margin-left: 10px;
+                    display: none;
+                    @media (max-width: 700px){
+                        display: flex;
+                    }
+                    .nav-divider{
+                        width: 26px;
+                        height: 1px;
+                        background-color: $black_color;
+                        position: absolute;
+                        transform: translate(-50%, -50%);
+                        left: 50%;
+                    }
+                    .nav-divider:nth-child(1){
+                        top: 0;
+                    }
+                    .nav-divider:nth-child(2){
+                        top: 50%;
+                    }
+                    .nav-divider:nth-child(3){
+                        top: 100%;
+                    }
                 }
             }
         }
