edit post navigation responsive.

--- a/scss/page/post-nav.scss
+++ b/scss/page/post-nav.scss
@@ -1,5 +1,8 @@
 .post-nav-div{
     margin: 40px 0;
+    @media (max-width:1500px){
+        padding: 0 15px;
+    }
     .post-container{
         max-width: 1231px;
         width: 100%;
