--- a/scss/modules/mixins.scss
+++ b/scss/modules/mixins.scss
@@ -8,4 +8,10 @@
     flex-wrap: $wrapProp;
 }
 
+@mixin text-styles ($size, $family, $color) {
+    font-size: $size;
+    font-family: $family;
+    color: $color;
+}
+
 // @include horizontal (space-between);
