--- a/scss/page/base.scss
+++ b/scss/page/base.scss
@@ -4,8 +4,13 @@
     margin: 0 auto;
     display: flex;
 }
-.container{
+.header-container{
     max-width: 1485px;
+    width: 100%;
+    margin: 0 auto;
+}
+.container{
+    max-width: 1231px;
     width: 100%;
     margin: 0 auto;
 }
