--- a/styles/style.css
+++ b/styles/style.css
@@ -347,3 +347,25 @@ a {
         background-color: #FFFFFF; }
       .designers-box .designers-div .designers-article .following {
         background-color: #E7E7E7; }
+
+.listBox-mainDiv {
+  justify-content: space-between;
+  padding: 70px 0;
+  border-bottom: 1px solid gray; }
+  .listBox-mainDiv .list-box h6 {
+    font-size: 16px;
+    font-family: "AvenirHeavy";
+    color: #222222;
+    margin-bottom: 40px; }
+  .listBox-mainDiv .list-box .list-box-a {
+    font-size: 16px;
+    font-family: "AvenirBook";
+    color: #222222;
+    line-height: 2.5; }
+  .listBox-mainDiv .list-box .inside-box-ul .inside-box-a {
+    font-size: 16px;
+    font-family: "AvenirBook";
+    color: #222222;
+    line-height: 2.5; }
+  .listBox-mainDiv .list-box .inside-margin {
+    margin: 40px 0; }
